--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "angular": "^1.4.7",
-    "babel": "^5.0.12",
+    "angular-ui-router": "^0.2.15",
+    "babel": "^5.8.34",
     "bluebird": "^2.9.34",
     "body-parser": "^1.12.0",
     "bootstrap": "^3.3.5",
